<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F6F8"
    android:orientation="vertical">

    <include layout="@layout/activity_title"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/distance_10"

        android:text="@string/mine_yjfk_ts"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="@dimen/distance_15"
        android:layout_marginRight="@dimen/distance_15"
        android:background="@color/white_ffffff"
        android:gravity="left|top"
        android:hint="@string/mine_yjfk_hint"
        android:padding="@dimen/dp_5"
        android:textColor="@color/black_333333"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/tv_tjfk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:layout_marginLeft="@dimen/distance_15"
        android:layout_marginRight="@dimen/distance_15"
        android:layout_marginTop="@dimen/distance_15"
        android:background="@drawable/bg_blue"
        android:gravity="center"
        android:text="@string/mine_tjfk"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>
