<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_F5F6F8"
              android:orientation="vertical">

    <include layout="@layout/activity_title"></include>

    <View
        style="@style/space_line"
        android:layout_marginTop="@dimen/distance_15"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:orientation="vertical"

        android:paddingLeft="@dimen/distance_15">


        <View
            style="@style/space_line"></View>


        <EditText
            android:id="@+id/et_sjh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:layout_gravity="center"
            android:background="@null"
            
            android:hint="@string/q_sjh"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_bbbbbb"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/text_size_16"/>


        <View
            style="@style/space_line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_mm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black_333333"
                android:background="@null"
                android:hint="@string/q_yzm"
                android:textColorHint="@color/gray_bbbbbb"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text_size_16"/>

            <TextView
                android:id="@+id/tv_yzm"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/distance_26"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/distance_15"
                android:background="@drawable/bg_blue_line"
                android:gravity="center"
                android:paddingLeft="@dimen/distance_10"
                android:paddingRight="@dimen/distance_10"
                android:text="@string/yzm"
                android:textColor="@color/main_color"
                android:textSize="@dimen/text_size_12"/>

        </LinearLayout>

        <View
            style="@style/space_line"></View>


        <EditText
            android:id="@+id/et_xmm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/q_xmm"
            android:password="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_bbbbbb"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/text_size_16"/>

        <View
            style="@style/space_line"></View>


        <EditText
            android:id="@+id/et_qxmm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/q_qxmm"
            android:password="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_bbbbbb"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/text_size_16"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="@dimen/distance_15"
        android:paddingRight="@dimen/distance_15">

        <TextView
            android:id="@+id/tv_qr"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_48"
            android:layout_marginTop="@dimen/height_36"
            android:background="@drawable/bg_blue"
            android:gravity="center"
            android:text="@string/qr"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/text_size_16"/>

    </RelativeLayout>
</LinearLayout>
