<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="7dp"
        android:background="@drawable/popwindow_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/distance_10"
        android:paddingRight="@dimen/distance_10">

        <RelativeLayout
            android:id="@+id/rl_kqjl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_ffffff"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/kqjl"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_ffffff"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/gzsz"
                android:textColor="@color/text_color"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_ffffff"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/help"
                android:textColor="@color/text_color"
                android:textSize="16sp" />


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>