<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F6F8"
    android:orientation="vertical">

    <include layout="@layout/activity_title"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/login_login" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_ffffff"
                android:orientation="vertical">

                <View style="@style/space_line"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp">

                    <LinearLayout
                        android:id="@+id/ll_zh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/distance_15"
                            android:src="@drawable/zhanghao" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:text="@string/zh"
                            android:textColor="@color/gray_666666"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_zh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:background="@null"
                        android:hint="@string/q_zh"
                        android:textColor="@color/gray_666666"
                        android:textColorHint="@color/gray_bbbbbb"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/l_username"
                        android:layout_width="30dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:src="@drawable/edit_down" />
                    </LinearLayout>

                </LinearLayout>

                <View style="@style/space_line"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/distance_15"
                            android:src="@drawable/mima" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:text="@string/mm"
                            android:textColor="@color/gray_666666"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_mm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/q_mm"
                        android:singleLine="true"
                        android:password="true"
                        android:textColor="@color/gray_666666"
                        android:textColorHint="@color/gray_bbbbbb"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="14sp" />
                </LinearLayout>

                <View style="@style/space_line"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/distance_15"
                            android:src="@drawable/huwubianhao" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:text="@string/fwbh"
                            android:textColor="@color/gray_666666"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_bh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:background="@null"
                        android:hint="@string/q_fwbh"
                        android:textColor="@color/gray_666666"
                        android:textColorHint="@color/gray_bbbbbb"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="@dimen/distance_15"
                android:paddingRight="@dimen/distance_15">

                <TextView
                    android:id="@+id/tv_dl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_48"
                    android:layout_marginTop="@dimen/height_36"
                    android:background="@drawable/bg_blue"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white_ffffff"
                    android:textSize="@dimen/text_size_16" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tv_dl"
                    android:layout_marginTop="@dimen/distance_10"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_jzmm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_style"
                        android:checked="true"
                        android:padding="@dimen/dp_5"
                        android:text="@string/jzmm"
                        android:textColor="@color/gray_313844"
                        android:textSize="@dimen/text_size_14" />

                    <CheckBox
                        android:id="@+id/cb_zddl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:button="@drawable/checkbox_style"
                        android:padding="@dimen/dp_5"
                        android:text="@string/zddl"
                        android:textColor="@color/gray_313844"
                        android:textSize="@dimen/text_size_14" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_wjmm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_dl"
                    android:layout_marginTop="@dimen/distance_10"
                    android:padding="@dimen/dp_5"
                    android:text="@string/wjmm"
                    android:textColor="@color/gray_313844"
                    android:textSize="@dimen/text_size_14" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>